--- a/ver/index.html
+++ b/ver/index.html
@@ -7,6 +7,6 @@
 a { color:black; text-decoration:none;}
 </style>
 <body>
-<script src="rss.bloople.net/?url=http%3A%2F%2Fftr.fivefilters.org%2Fmakefulltextfeed.php%3Furl%3Dcreatefeed.fivefilters.org%2Fextract.php%3Furl%3Dhttps%3A%2F%2Fwww.playstation.com%2Fen-us%2Fsupport%2Fsystem-updates%2Fps-vita%2F%26in_id_or_class%3D%253Ch2%2Bclass%3D%2522%2Bsection-heading%2Bcenter-align-heading%2522%253E%26url_contains%3D%26links%3Dpreserve%26use_extracted_title&limit=0&showempty=true&striphtml=true&forceutf8=true&type=js"></script>
+<script src="https://rss.bloople.net/?url=http%3A%2F%2Fftr.fivefilters.org%2Fmakefulltextfeed.php%3Furl%3Dcreatefeed.fivefilters.org%2Fextract.php%3Furl%3Dhttps%3A%2F%2Fwww.playstation.com%2Fen-us%2Fsupport%2Fsystem-updates%2Fps-vita%2F%26in_id_or_class%3D%253Ch2%2Bclass%3D%2522%2Bsection-heading%2Bcenter-align-heading%2522%253E%26url_contains%3D%26links%3Dpreserve%26use_extracted_title&limit=0&showempty=true&striphtml=true&forceutf8=true&type=js"></script>
 </body>
 </html> 
